Your commit message

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -316,7 +316,7 @@
             android:contentDescription="@string/home_icon" />
 
         <ImageView
-            android:id="@+id/search"
+            android:id="@+id/searchIcon"
             android:layout_width="0dp"
             android:layout_height="24dp"
             android:layout_weight="1"
